samples/_failures_safe/1761142496_f7d1fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e0dd46c.c: In function ‘main’:
./samples/SAFE/__tmp_8e0dd46c.c:161:9: error: expected declaration or statement at end of input
  161 |         }
      |         ^
./samples/SAFE/__tmp_8e0dd46c.c:161:9: error: expected declaration or statement at end of input
